--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Fundamentals</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -19,6 +21,19 @@
             <li class="menu-item">Event Loop</li>
         </ul>
     </header>
+    <div class="content">
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Explore the main Fundamentals of JavaScript</h1>
+                <button class="button-hero">
+                    View More
+                    <span class="material-symbols-outlined">
+                        arrow_forward
+                    </span>
+                </button>
+            </div>
+        </section>
+    </div>
 </body>
 
 </html>
