--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header>
         <h1>JS Fundamentals</h1>
         <ul class="menu">
-            <li class="menu-item">JavaScript Async</li>
-            <li class="menu-item">Callback</li>
-            <li class="menu-item">Promise</li>
-            <li class="menu-item">Async/Await</li>
-            <li class="menu-item">Event Loop</li>
+            <li class="menu-item"><a href="#async">JavaScript Async</a></li>
+            <li class="menu-item"><a href="#callback">Callback</a></li>
+            <li class="menu-item"><a href="#promise">Promise</a></li>
+            <li class="menu-item"><a href="#async-await">Async/Await</a></li>
+            <li class="menu-item"><a href="#loop">Event Loop</a></li>
         </ul>
         <details>
             <summary>
@@ -27,11 +27,11 @@
                 </span>
             </summary>
             <ul class="hamburger-menu">
-                <li>JavaScript Async</li>
-                <li>Callback</li>
-                <li>Promise</li>
-                <li>Async/Await</li>
-                <li>Event Loop</li>
+                <li><a href="#async">JavaScript Async</a></li>
+                <li><a href="#callback">Callback</a></li>
+                <li><a href="#promise">Promise</a></li>
+                <li><a href="#async-await">Async/Await</a></li>
+                <li><a href="#loop">Event Loop</a></li>
             </ul>
         </details>
     </header>
@@ -186,6 +186,9 @@ console.log('Second');
 
         </main>
     </div>
+    <footer>
+        &copy; Torrober 2024
+    </footer>
 </body>
 
 </html>
