--- a/index.html
+++ b/index.html
@@ -39,12 +39,17 @@
         <section class="hero">
             <div class="hero-content">
                 <h1>Explore the main Fundamentals of JavaScript</h1>
+
                 <button class="button-hero">
-                    View More
-                    <span class="material-symbols-outlined">
-                        arrow_forward
-                    </span>
+                    <a href="#async">
+                        View More
+                    </a>
+                        <span class="material-symbols-outlined">
+                            arrow_forward
+                        </span>
+                    
                 </button>
+
             </div>
         </section>
         <main>
